增加storybook 修改文档

--- a/lib/formly-editor.less
+++ b/lib/formly-editor.less
@@ -1,4 +1,4 @@
 @import 'layouts/index';
 @import 'widget/index';
 @import 'editor/formly-editor.component';
-@import '~node_modules/ng-zorro-antd/resizable/style/entry.less';
+@import 'ng-zorro-antd/resizable/style/entry.less';
